--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,24 @@
       </p>
     <![endif]-->
 
+    <fieldset id="filter">
+      <legend>Filter by colour</legend>
+      <div>
+        <input data-filter-option type="checkbox" id="red" name="colour" value="red">
+        <label for="red">Red</label>
+      </div>
+      <div>
+        <input data-filter-option type="checkbox" id="green" name="colour" value="green">
+        <label for="green">Green</label>
+      </div>
+      <div>
+        <input data-filter-option type="checkbox" id="blue" name="colour" value="blue">
+        <label for="blue">Blue</label>
+      </div>
+    </fieldset>
+
+
+
     <div style="text-align: center;">
       <div class="passport-wrap"></div>
     </div>
